<resources>
    <string name="app_name">Happy Birthday</string>
    <string name="date_title_add_person">تاریخ تولد</string>
    <string name="name_hint_add_person">نام و نام خانوادگی</string>
    <string name="register">ثبت</string>
    <string name="birth_date_and_time_title_add_person">زمان تولد</string>
    <string name="birth_date_btn_title_add_person">تاریخ</string>
    <string name="birth_time_btn_title_add_person">ساعت</string>
    <string name="date_not_selected_add_person">تاریخ انتخاب نشده است</string>
    <string name="time_not_selected_add_person">زمان انتخاب نشده است</string>
    <string name="persian_date_picker">PersianDatePicker</string>
    <string name="persian_time_picker">PersianTimePicker</string>
    <string name="name_not_entered_add_person">لطفا نام و نام خانوادگی را وارد نمایید</string>
    <string name="date_not_entered_add_person">لطفا تاریخ را وارد نمایید</string>
    <string name="time_not_entered_add_person">لطفا ساعت را وارد نمایید</string>
    <string name="birthday_shared_preferences">BirthDay</string>
    <string name="person_registered_add_person">%s ثبت شد!</string>
    <string name="person_exists_add_person">شخصی با این نام موجود است</string>
    <string name="wrong_date_add_person">تاریخ نادرست</string>
    <string name="person_deletion_prompt_message_persons_list">آیا از حذف %s مطمئن هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="person_deletion_successful_persons_list">%s با موفقیت حذف شد</string>
    <string name="deletion_failed">فرآیند حذف با مشکل روبرو شده است</string>
    <string name="edit">ویرایش</string>
    <string name="confirm">تأیید</string>
    <string name="cancel">لغو</string>
    <string name="phone_number_hint_add_person">شماره همراه</string>
    <string name="add_person_title">اطلاعات فرد را وارد نمایید</string>
    <string name="enter_valid_phone_number_add_person">لطفا شماره همراه معتبر وارد کنید</string>
    <string name="phone_number_exists_add_person">شخصی با این شماره همراه موجود است</string>
    <string name="no_information_to_show_persons_list">اطلاعاتی جهت نمایش وجود ندارد</string>
    <string name="persons_clear_prompt_message_persons_list">
        آیا از حذف تمامی اطلاعات افراد مطمئن هستید؟
    </string>
    <string name="successfully_cleared_persons_list">اطلاعات افراد با موفقیت حذف شد</string>
    <string name="clear_action_persons_list">Clear</string>
    <string name="persons_counter_title_persons_list">Persons Counter</string>
    <string name="persons_count_message_persons_list">تاکنون اطلاعات %d نفر ثبت شده است</string>
    <string name="remove">حذف</string>
    <string name="add_person_main_menu">افزودن فرد</string>
    <string name="persons_list_main_menu">فهرست افراد</string>
    <string name="add_message_main_menu">افزودن پیام</string>
    <string name="messages_list_main_menu">فهرست پیام ها</string>
    <string name="message_hint_add_message">متن پیام</string>
    <string name="message_registered_add_message">پیام واردشده با موفقیت ثبت شد!</string>
    <string name="message_exists_add_message">پیامی با این محتوا موجود است</string>
    <string name="error_occurred">خطایی رخ داده است</string>
    <string name="message_not_entered_add_message">لطفا متن پیام را وارد نمایید</string>
    <string name="message_characters_not_enough_add_message">
        متن پیام حداقل باید شامل 10 کاراکتر باشد
    </string>
    <string name="setting_action_main_menu">تنظیمات</string>
    <string name="message_deletion_prompt_message_messages_list">
        آیا از حذف این پیام مطمئن هستید؟
    </string>
    <string name="message_deletion_successful_messages_list">پیام موردنظر با موفقیت حذف شد</string>
    <string name="no_messages_to_show_messages_list">پیامی جهت نمایش وجود ندارد</string>
    <string name="messages_counter_title_messages_list">Messages Counter</string>
    <string name="messages_count_message_messages_list">تاکنون %d پیام ثبت شده است</string>
    <string name="messages_clear_prompt_message_messages_list">
        آیا از حذف تمامی پیام ها مطمئن هستید؟
    </string>
    <string name="successfully_cleared_messages_list">پیام ها با موفقیت حذف شد</string>
</resources>
