<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/clear_information"
        android:icon="@drawable/ic_garbage"
        android:title="@string/clear_action_persons_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/persons_count"
        android:icon="@drawable/badge_persons_list"
        android:title="@string/persons_counter_title_persons_list"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/messages_count"
        android:icon="@drawable/badge_messages_list"
        android:title="@string/messages_counter_title_messages_list"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>